--- a/src/components/Calculator/styles.scss
+++ b/src/components/Calculator/styles.scss
@@ -21,6 +21,8 @@
     justify-content: center;
     align-items: center;
     height: 100vh;
+    max-width: 460px;
+    margin: 0 .5rem;
 
     .box-title-theme {
         h1 {
@@ -30,7 +32,7 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
-        width: 313.56px;
+        width: 100%;
     }
 
 
@@ -50,57 +52,44 @@
             margin: 1.2rem 0;
         }
 
-
         .box-buttons {
-            display: flex;
-            flex-direction: row;
-
             .buttons {
-                display: grid;
-                grid-template-columns: 1fr 1fr 1fr 1fr;
+                display: flex;
+                flex-wrap: wrap;
                 gap: 1rem;
                 padding: 1.2rem;
                 border-radius: .5rem;
                 background-color: var(--keypad_toggle-bg);
-                position: relative;
 
                 .btn {
                     display: flex;
+                    flex: 1 0 20%;
                     justify-content: center;
                     align-items: center;
+                    height: 50px;
                     border-radius: .2rem;
                     background-color: var(--keys-bg);
                     color: var(--key-text);
                     font-size: 1.3rem;
-                    width: 50px;
-                    height: 50px;
                     box-shadow: 0px 3px 3px 0px var(--keys-shadow);
                     cursor: pointer;
 
                     &:hover {
                         animation: pulse 1.5s cubic-bezier(0.4, 0, 0.6, 1) infinite;
                     }
-                }
 
-                .btn:nth-child(4),
-                .btn:nth-last-child(2) {
-                    background-color: var(--reset_del-key);
-                    color: var(--white);
-                    box-shadow: 0px 3px 3px 0px var(--reset_del-shadow);
-                }
+                    &:nth-child(4),
+                    &:nth-last-child(2) {
+                        background-color: var(--reset_del-key);
+                        color: var(--white);
+                        box-shadow: 0px 3px 3px 0px var(--reset_del-shadow);
+                    }
 
-                .btn:nth-last-child(2) {
-                    width: calc(200% + .7rem);
-                }
-
-                .btn:last-child {
-                    width: calc(50% - 1.7rem);
-                    position: absolute;
-                    bottom: 1.2rem;
-                    right: 1.2rem;
-                    background-color: var(--toggle-circle_keyEqual-bg);
-                    box-shadow: 0px 3px 3px 0px var(--keyEqual-shadow);
-                    color: var(--white);
+                    &:last-child {
+                        background-color: var(--toggle-circle_keyEqual-bg);
+                        box-shadow: 0px 3px 3px 0px var(--keyEqual-shadow);
+                        color: var(--white);
+                    }
                 }
             }
         }
