--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -7,7 +7,10 @@
 }
 
 body {
-
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
     font-family: "League Spartan", sans-serif;
     font-weight: 700;
     font-style: normal;
